--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Hey there! This repo contains the bulk of the code that I write. Refer to the sub-directories to get a hang of the context.
+Practice code. Just to get a hang of things.
